# modules/PhoneBookWeb/PhoneBookWeb-api/src/main/java/com/sain/phonebook/service/AddressService.java
@@ -56,7 +56,7 @@ public interface AddressService extends BaseService {
 	public Address addAddress(String name, ServiceContext serviceContext)
 		throws PortalException;
 
-	public void deleteAddress(long addressId) throws PortalException;
+	public Address deleteAddress(long addressId) throws PortalException;
 
 	@Transactional(propagation = Propagation.SUPPORTS, readOnly = true)
 	public Address getAddress(long addressId) throws PortalException;
